--- a/Uleadz.StaticWeb/Pages/Shared/_AboutUs.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_AboutUs.cshtml
@@ -45,9 +45,10 @@
         </div>
     </div>
     <div class="group-624">
-        <a href="#" class="prev"><img class="arrow-right" src="~/lib/img/arrow-right-6@2x.svg"></a>
+        <a id="prev" class="prev disable"><img class="arrow-right" src="~/lib/img/arrow-right-6@2x.svg"></a>
         @*<img class="arrow-right" src="~/lib/img/arrow-right-6@2x.svg" />*@
-        <div class="flex-col">
+        <div class="flex-col side" id="features">
+        <a id="next" class="next"><img class="arrow-right-1" src="~/lib/img/arrow-right-5@2x.svg"></a>
             <div class="flex-row-1">
                 <div class="flex-col-1">
                     <div class="testimonial poppins-normal-black-14px">TESTIMONIAL</div>
@@ -64,9 +65,9 @@
                     <img class="rectangle-260" src="~/lib/img/rectangle-260-1@2x.png" />
                 </div>
             </div>
-            <div class="group-622 side-2">
+            <div class="group-622 paginations">
 
-                <div class="overlap-group1 pagination">
+                <div class="overlap-group1 pagination" data-index="first">
                     <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px ">
                         &#34;If you are looking to save time and be more organized with your business, this is what you are
                         looking for. Awesome system, very time saving and user friendly! Great to keep your business
@@ -93,7 +94,7 @@
 
                 @*copy*@
 
-                <div class="overlap-group1 pagination">
+                <div class="overlap-group2 pagination">
                     <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px ">
                         &#34;copy If you are looking to save time and be more organized with your business, this is what you are
                         looking for. Awesome system, very time saving and user friendly! Great to keep your business
@@ -106,7 +107,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="overlap-group2 pagination">
+                <div class="overlap-group2 pagination" data-index="last">
                     <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
                         &#34; copy If you are looking to save time and be more organized with your business, this is what you are
                         looking for. Awesome system, very time saving and user friendly! Great to keep your business
@@ -120,7 +121,7 @@
 
             </div>
         </div>
-        <a href="#" class="next"><img class="arrow-right-1" src="~/lib/img/arrow-right-5@2x.svg"></a>
+
         @*<img class="arrow-right-1" src="~/lib/img/arrow-right-5@2x.svg" />*@
     </div>
 
