--- a/Uleadz.StaticWeb/Pages/Shared/_IndustriesLocksmith.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_IndustriesLocksmith.cshtml
@@ -303,12 +303,12 @@
             </div>
         </div>
         <div class="group-573">
-            <div class="group-525 side">
+            <div class="group-525 side" id="features">
                 <div class="packed-with-features poppins-medium-black-42px">
                     Packed With Features For Your Home<br />Service Business
                 </div>
-                <div class="frame-17-3">
-                    <div class="overlap-group-9 pagination">
+                <div class="frame-17-3 paginations">
+                    <div class="overlap-group-9 pagination" data-index="first">
                         <img class="purse-1" src="~/lib/img/purse-1-2@2x.png" />
                         <div class="job-profitability poppins-medium-black-34px">Job Profitability</div>
                         <div class="estimates-invoices poppins-normal-black-18px">
@@ -333,8 +333,8 @@
                         </div>
                     </div>
                     @*copy*@
-                    <div class="overlap-group-9 pagination">
-                        @*<img class="purse-1" src="~/lib/img/purse-1-2@2x.png" />*@
+                    <div class="overlap-group1-1  pagination">
+                        <img class="purse-1" src="~/lib/img/purse-1-2@2x.png" />
                         <div class="job-profitability poppins-medium-black-34px">Job Profitability</div>
                         <div class="estimates-invoices poppins-normal-black-18px">
                             Estimates &amp; Invoices<br />Contracts &amp; Signatures<br />Customer Management<br />Email &amp; SMS
@@ -349,8 +349,8 @@
                             Payments<br />Square Integration
                         </div>
                     </div>
-                    <div class="overlap-group2-1 pagination">
-                        @*<img class="purse-3" src="~/lib/img/purse-3@2x.png" />*@
+                    <div class="overlap-group2-1 pagination" data-index="last">
+                        <img class="purse-3" src="~/lib/img/purse-3@2x.png" />
                         <div class="online-booking poppins-medium-black-34px">Online Booking</div>
                         <div class="file-photo-attachmen poppins-normal-black-18px">
                             File/Photo Attachments<br />Online Booking<br />Notifications &amp; Reminders<br />Custom Forms &amp;
@@ -366,8 +366,8 @@
                     </div>*@
                 </div>
             </div>
-            <a href="#" class="prev"><img class="arrow-11" src="/lib/img/arrow-right-4@2x.svg"></a>
-            <a href="#" class="next"><img class="arrow-22" src="/lib/img/arrow-right-3@2x.svg"></a>
+            <a id="prev" class="prev disable"><img class="arrow-11" src="/lib/img/arrow-right-4@2x.svg"></a>
+            <a  id="next" class="next"><img class="arrow-22" src="/lib/img/arrow-right-3@2x.svg"></a>
             <div class="overlap-group4"><img class="line-44" src="~/lib/img/line-44@2x.svg" /></div>
         </div>
 
