--- a/Uleadz.StaticWeb/Pages/Shared/_IndustriesLocksmithMobile.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_IndustriesLocksmithMobile.cshtml
@@ -49,9 +49,11 @@
                         Android, and your favorite web <br />browser, you can run your business from<br />anywhere easily.
                     </span>
                 </p>
-                <div class="group-1803">
-                    <div class="group-575">
-                        <div class="group-574">
+                <div class="group-1803 side-1">
+                    <a href="#" class="next"><img class="arrow-2222" src="/lib/img/arrow-right-3@2x.svg"></a>
+                    <a href="#" class="prev"><img class="arrow-1111" src="/lib/img/arrow-right-4@2x.svg"></a>
+                    <div class="group-575 pagination">
+                        <div class="group-574 ">
                             <div class="group-642"><img class="coins2-5-1" src="~/lib/img/coins2-5-11@2x.png" /></div>
                             <div class="easy-to-use-software-for-contractors poppins-normal-black-20px">
                                 Easy to use software<br />for contractors
@@ -65,25 +67,26 @@
                             </a>
                         </div>
                     </div>
-                    <div class="group-576">
-                        <div class="overlap-group1">
-                            <div class="rectangle-225"></div>
-                            <div class="group-574-1">
-                                <div class="overlap-group-1"><img class="coins2-5" src="~/lib/img/coins2-5-12@2x.png" /></div>
-                                <div class="manage-your-entire-p poppins-normal-black-20px">
-                                    Manage your entire<br />plumbing business from<br />one easy to use app
-                                </div>
-                                <p class="try-uleadzs-compreh-1 poppins-normal-black-14px">
-                                    Try Uleadz’s comprehensive tools<br />for contractors to manage job<br />schedules, customers, and
-                                    teams<br />or field crews, all from one <br />software app.
-                                </p>
-                                <a href="#">
-                                    <div class="know-more-3 poppins-normal-black-14px">Know more</div>
-                                </a>
-                            </div>
-                        </div>
+               
+                    <div class="group-576 pagination">
+            <div class="overlap-group1">
+                <div class="rectangle-225"></div>
+                <div class="group-574-1">
+                    <div class="overlap-group-1"><img class="coins2-5" src="~/lib/img/coins2-5-12@2x.png" /></div>
+                    <div class="manage-your-entire-p poppins-normal-black-20px">
+                        Manage your entire<br />plumbing business from<br />one easy to use app
                     </div>
-                    <div class="group-579">
+                    <p class="try-uleadzs-compreh-1 poppins-normal-black-14px">
+                        Try Uleadz’s comprehensive tools<br />for contractors to manage job<br />schedules, customers, and
+                        teams<br />or field crews, all from one <br />software app.
+                    </p>
+                    <a href="#">
+                        <div class="know-more-3 poppins-normal-black-14px">Know more</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+                    <div class="group-579 pagination">
                         <div class="overlap-group2">
                             <div class="rectangle-225"></div>
                             <div class="group-574-2">
@@ -97,11 +100,11 @@
                                 </p>
                                 <a href="#">
                                     <div class="know-more poppins-normal-black-14px">Know more</div>
-                                    </a>
+                                </a>
                             </div>
                         </div>
                     </div>
-                    <div class="group-578">
+                    <div class="group-578 pagination">
                         <div class="group-574-3">
                             <div class="overlap-group-3"><img class="coins2-5" src="~/lib/img/coins2-5-13@2x.png" /></div>
                             <div class="give-your-locksmith poppins-normal-black-20px">
@@ -113,7 +116,7 @@
                             </p>
                             <a href="#">
                                 <div class="know-more poppins-normal-black-14px">Know more</div>
-                                </a>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -280,14 +283,16 @@
                 <div class="integrate-with-xero-quick-books poppins-normal-black-14px">Integrate with Xero/QuickBooks</div>
             </div>
         </div>
-        <div class="overlap-group-container-2">
+        <div class="overlap-group-container-2 ">
             <div class="overlap-group6">
                 <div class="rectangle-181-1"></div>
                 <div class="packed-with-features poppins-medium-black-28px">
                     Packed With Features<br />For Your Home Service<br />Business
                 </div>
-                <div class="group-1765">
-                    <div class="group-522">
+                <div class="group-1765 side-11">
+                    <a href="#" class="next"><img class="arrow-2222" src="/lib/img/arrow-right-3@2x.svg"></a>
+                    <a href="#" class="prev"><img class="arrow-1111" src="/lib/img/arrow-right-4@2x.svg"></a>
+                    <div class="group-522 pagination">
                         <div class="overlap-group-5">
                             <img class="purse-1" src="~/lib/img/purse-1-2@2x.png" />
                             <div class="job-profitability poppins-medium-black-26px">Job Profitability</div>
@@ -297,7 +302,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="group-523">
+                    <div class="group-523 pagination">
                         <div class="overlap-group3-2">
                             <img class="purse-2" src="~/lib/img/purse-2-3@2x.png" />
                             <div class="customer-management poppins-medium-black-26px">Customer<br />Management</div>
@@ -307,7 +312,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="group-520">
+                    <div class="group-520 pagination">
                         <div class="overlap-group1-1">
                             <img class="purse-3" src="~/lib/img/purse-3-4@2x.png" />
                             <div class="online-booking poppins-medium-black-26px">Online Booking</div>
@@ -317,7 +322,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="group-521">
+                    <div class="group-521 pagination">
                         <div class="overlap-group2-1">
                             <img class="purse-3-1" src="~/lib/img/purse-3-7@2x.png" />
                             <div class="online-booking-1 poppins-medium-black-26px">Online Booking</div>
