--- a/Uleadz.StaticWeb/Pages/Shared/_Pricing.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_Pricing.cshtml
@@ -178,98 +178,99 @@
         </div>
         <div class="group-624">
             <div class="group-623">
-                <a href="#" class="prev"><img class="arrow-right-3" src="~/lib/img/arrow-right-4@2x.png" /></a>
+                <a id="prev" class="prev disable"><img class="arrow-right-3" src="~/lib/img/arrow-right-4@2x.png" /></a>
                 @*<img class="arrow-right-3" src="~/lib/img/arrow-right-4@2x.png" />*@
-                <div class="flex-col-6">
-                    <div class="flex-row-4">
-                        <div class="flex-col-7">
-                            <div class="testimonial poppins-normal-black-14px">TESTIMONIAL</div>
-                            <div class="you-get-more-than-what-you-pay-for poppins-medium-black-50px">
-                                You get more than what<br />you pay for
-                            </div>
-                            <p class="we-will-take-care-of-everything-else poppins-normal-black-16px">
-                                We will take care of everything else
-                            </p>
+            <div class="flex-col-6 side" id="features">
+                <a id="next" class="next"><img class="arrow-right-4" src="~/lib/img/arrow-right-3@2x.png" /></a>
+
+                <div class="flex-row-4">
+                    <div class="flex-col-7">
+                        <div class="testimonial poppins-normal-black-14px">TESTIMONIAL</div>
+                        <div class="you-get-more-than-what-you-pay-for poppins-medium-black-50px">
+                            You get more than what<br />you pay for
                         </div>
-                        <div class="overlap-group-2">
-                            <img class="rectangle-258" src="~/lib/img/rectangle-258-2@2x.png" />
-                            <img class="rectangle-259" src="~/lib/img/rectangle-259-1@2x.png" />
-                            <img class="rectangle-260" src="~/lib/img/rectangle-260-1@2x.png" />
+                        <p class="we-will-take-care-of-everything-else poppins-normal-black-16px">
+                            We will take care of everything else
+                        </p>
+                    </div>
+                    <div class="overlap-group-2">
+                        <img class="rectangle-258" src="~/lib/img/rectangle-258-2@2x.png" />
+                        <img class="rectangle-259" src="~/lib/img/rectangle-259-1@2x.png" />
+                        <img class="rectangle-260" src="~/lib/img/rectangle-260-1@2x.png" />
+                    </div>
+                </div>
+                <div class="group-622  paginations">
+                    <div class="group-621 pagination" data-index="first">
+                        <div class="overlap-group">
+                            <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
+                                &#34;If you are looking to save time and be more organized with your business, this is what you
+                                are looking for. Awesome system, very time saving and user friendly! Great to keep your business
+                                organized!&#34;
+                            </div>
+                            <div class="group-618">
+                                <div class="group-617">
+                                    <div class="overlap-group-3">
+                                        <div class="name valign-text-middle poppins-medium-black-16px">Michael Jones</div>
+                                        <div class="home-service-professional valign-text-middle poppins-normal-black-14px">
+                                            Home Service Professional
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="group-622 side-2">
-                        <div class="group-621 pagination">
-                            <div class="overlap-group">
-                                <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
-                                    &#34;If you are looking to save time and be more organized with your business, this is what you
-                                    are looking for. Awesome system, very time saving and user friendly! Great to keep your business
-                                    organized!&#34;
-                                </div>
-                                <div class="group-618">
-                                    <div class="group-617">
-                                        <div class="overlap-group-3">
-                                            <div class="name valign-text-middle poppins-medium-black-16px">Michael Jones</div>
-                                            <div class="home-service-professional valign-text-middle poppins-normal-black-14px">
-                                                Home Service Professional
-                                            </div>
+                    <div class="group-620 pagination">
+                        <div class="overlap-group">
+                            <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
+                                &#34;If you are looking to save time and be more organized with your business, this is what you
+                                are looking for. Awesome system, very time saving and user friendly! Great to keep your business
+                                organized!&#34;
+                            </div>
+                            <div class="group-619">
+                                <div class="group-617-1">
+                                    <div class="overlap-group-4">
+                                        <div class="name valign-text-middle poppins-medium-black-16px">Josh Garcia</div>
+                                        <div class="field-technician valign-text-middle poppins-normal-black-14px">
+                                            Field Technician
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="group-620 pagination">
-                            <div class="overlap-group">
-                                <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
-                                    &#34;If you are looking to save time and be more organized with your business, this is what you
-                                    are looking for. Awesome system, very time saving and user friendly! Great to keep your business
-                                    organized!&#34;
-                                </div>
-                                <div class="group-619">
-                                    <div class="group-617-1">
-                                        <div class="overlap-group-4">
-                                            <div class="name valign-text-middle poppins-medium-black-16px">Josh Garcia</div>
-                                            <div class="field-technician valign-text-middle poppins-normal-black-14px">
-                                                Field Technician
-                                            </div>
+                    </div>
+                    @*copy*@
+                    <div class="group-620 pagination">
+                        <div class="overlap-group">
+                            <div class="  if-you-are-looking valign-text-middle poppins-normal-black-18px">
+                                &#34; copy If you are looking to save time and be more organized with your business, this is what you
+                                are looking for. Awesome system, very time saving and user friendly! Great to keep your business
+                                organized!&#34;
+                            </div>
+                            <div class="group-618">
+                                <div class="group-617">
+                                    <div class="overlap-group-3">
+                                        <div class="name valign-text-middle poppins-medium-black-16px">Michael Jones</div>
+                                        <div class="home-service-professional valign-text-middle poppins-normal-black-14px">
+                                            Home Service Professional
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        @*copy*@
-                        <div class="group-621 pagination">
-                            <div class="overlap-group">
-                                <div class="  if-you-are-looking valign-text-middle poppins-normal-black-18px">
-                                    &#34; copy If you are looking to save time and be more organized with your business, this is what you
-                                    are looking for. Awesome system, very time saving and user friendly! Great to keep your business
-                                    organized!&#34;
-                                </div>
-                                <div class="group-618">
-                                    <div class="group-617">
-                                        <div class="overlap-group-3">
-                                            <div class="name valign-text-middle poppins-medium-black-16px">Michael Jones</div>
-                                            <div class="home-service-professional valign-text-middle poppins-normal-black-14px">
-                                                Home Service Professional
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                    </div>
+                    <div class="group-620 pagination" data-index="last">
+                        <div class="overlap-group">
+                            <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
+                                &#34; copy If you are looking to save time and be more organized with your business, this is what you
+                                are looking for. Awesome system, very time saving and user friendly! Great to keep your business
+                                organized!&#34;
                             </div>
-                        </div>
-                        <div class="group-620 pagination">
-                            <div class="overlap-group">
-                                <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
-                                    &#34; copy If you are looking to save time and be more organized with your business, this is what you
-                                    are looking for. Awesome system, very time saving and user friendly! Great to keep your business
-                                    organized!&#34;
-                                </div>
-                                <div class="group-619">
-                                    <div class="group-617-1">
-                                        <div class="overlap-group-4">
-                                            <div class="name valign-text-middle poppins-medium-black-16px">Josh Garcia</div>
-                                            <div class="field-technician valign-text-middle poppins-normal-black-14px">
-                                                Field Technician
-                                            </div>
+                            <div class="group-619">
+                                <div class="group-617-1">
+                                    <div class="overlap-group-4">
+                                        <div class="name valign-text-middle poppins-medium-black-16px">Josh Garcia</div>
+                                        <div class="field-technician valign-text-middle poppins-normal-black-14px">
+                                            Field Technician
                                         </div>
                                     </div>
                                 </div>
@@ -277,7 +278,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#" class="next"><img class="arrow-right-4" src="~/lib/img/arrow-right-3@2x.png" /></a>
+            </div>
                 @*<img class="arrow-right-4" src="~/lib/img/arrow-right-3@2x.png" />*@
             </div>
         </div>
