--- a/Uleadz.StaticWeb/Pages/Shared/_WhyUleadz.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_WhyUleadz.cshtml
@@ -55,13 +55,13 @@
 
 
     <div class="group-573">
-        <div class="group-525 side">
+        <div class="group-525 side " id="features">
 
             <div class="packed-with-features poppins-medium-black-42px">
                 Packed With Features For Your Home<br />Service Business
             </div>
-            <div class="frame-17 carousel-inner">
-                <div class="overlap-group-1 pagination">
+            <div class="frame-17 carousel-inner paginations" >
+                <div class="overlap-group1-1 pagination" data-index="first">
                     <img class="purse-1" src="~/lib/img/purse-1@2x.png" />
                     <div class="job-profitability poppins-medium-black-34px">Job Profitability</div>
                     <div class="estimates-invoices poppins-normal-black-18px">
@@ -85,8 +85,7 @@
                         Fields
                     </div>
                 </div>
-
-                <div class="overlap-group-1 pagination">
+                <div class="overlap-group1-1 pagination">
                     @*<img class="purse-1" src="~/lib/img/purse-1@2x.png" />*@
                     <div class="job-profitability poppins-medium-black-34px"> Profitability</div>
                     <div class="estimates-invoices poppins-normal-black-18px">
@@ -102,7 +101,7 @@
                         Payments<br />Square Integration
                     </div>
                 </div>
-                <div class="overlap-group2-1 pagination">
+                <div class="overlap-group2-1 pagination" data-index="last">
                     <img class="purse-3" src="~/lib/img/purse-3@2x.png" />
                     <div class="online-booking poppins-medium-black-34px"> Booking</div>
                     <div class="file-photo-attachmen poppins-normal-black-18px">
@@ -112,10 +111,10 @@
                 </div>
 
             </div>
-
+           
         </div>
-        <a href="#" class="prev"><img class="arrow-11" src="/lib/img/arrow-right-4@2x.svg"></a>
-        <a href="#" class="next"><img class="arrow-22" src="/lib/img/arrow-right-3@2x.svg"></a>
+        <a   id="prev" class="prev disable"><img class="arrow-11" src="/lib/img/arrow-right-4@2x.svg"></a>
+        <a  id="next" class="next"><img class="arrow-22" src="/lib/img/arrow-right-3@2x.svg"></a>
         <div class="overlap-group4"><img class="line-44" src="~/lib/img/line-44@2x.svg" /></div>
 
     </div>
@@ -293,112 +292,94 @@
                 </div>
             </div>
         </div>
-        <div class="group-624">
-            <a href="#" class="prev"><img class="arrow-right" src="~/lib/img/arrow-right-4@2x.png" /></a>
-            @*<img class="arrow-right" src="~/lib/img/arrow-right-4@2x.svg" />*@
-            <div class="flex-col-3 side-2">
-                <div class="flex-row-2 pagination">
-                    <div class="flex-col-4">
-                        <div class="testimonial poppins-normal-black-14px">TESTIMONIAL</div>
-                        <div class="you-get-more-than-what-you-pay-for poppins-medium-black-50px">
-                            You get more than what<br />you pay for
-                        </div>
-                        <p class="we-will-take-care-of-everything-else poppins-normal-black-16px">
-                            We will take care of everything else
-                        </p>
+        <div class="group-624 side"  id="features">
+            <a  id="prev" class="prev disable"><img class="arrow-right" src="~/lib/img/arrow-right-4@2x.png" /></a>
+            <div class="flex-col-3 paginations">
+                 <div class="flex-row-2 ">
+                <div class="flex-col-4">
+                    <div class="testimonial poppins-normal-black-14px">TESTIMONIAL</div>
+                    <div class="you-get-more-than-what-you-pay-for poppins-medium-black-50px">
+                        You get more than what<br />you pay for
                     </div>
-                    <div class="overlap-group-3">
-                        <img class="rectangle-258-1" src="~/lib/img/rectangle-258-1@2x.png" />
-                        @*<img class="rectangle-258" src="~/lib/img/rectangle-258-2@2x.png" />*@
-                        <img class="rectangle-259" src="~/lib/img/rectangle-259-1@2x.png" />
-                        <img class="rectangle-260" src="~/lib/img/rectangle-260-1@2x.png" />
+                    <p class="we-will-take-care-of-everything-else poppins-normal-black-16px">
+                        We will take care of everything else
+                    </p>
+                </div>
+                <div class="overlap-group-3">
+                    <img class="rectangle-258-1" src="~/lib/img/rectangle-258-1@2x.png" />
+                    <img class="rectangle-259" src="~/lib/img/rectangle-259-1@2x.png" />
+                    <img class="rectangle-260" src="~/lib/img/rectangle-260-1@2x.png" />
+                </div>
+            </div>
+                <div class="group-622 pagination" data-index="first">
+                <div class="overlap-group1-3 " >
+                    <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
+                        &#34;If you are looking to save time and be more organized with your business, this is what you are
+                        looking for. Awesome system, very time saving and user friendly! Great to keep your business
+                        organized!&#34;
+                    </div>
+                    <div class="group-618">
+                        <img class="ellipse-42" src="~/lib/img/ellipse-42-2@2x.png" />
+                        <div class="overlap-group-4">
+                            <div class="name valign-text-middle poppins-medium-black-16px">Michael Jones</div>
+                            <div class="home-service-professional valign-text-middle poppins-normal-black-14px">
+                                Home Service Professional
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="group-622 pagination">
-                    <div class="overlap-group1-3">
-                        <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
-                            &#34;If you are looking to save time and be more organized with your business, this is what you are
-                            looking for. Awesome system, very time saving and user friendly! Great to keep your business
-                            organized!&#34;
-                        </div>
-                        <div class="group-618">
-                            <img class="ellipse-42" src="~/lib/img/ellipse-42-2@2x.png" />
-                            <div class="overlap-group-4">
-                                <div class="name valign-text-middle poppins-medium-black-16px">Michael Jones</div>
-                                <div class="home-service-professional valign-text-middle poppins-normal-black-14px">
-                                    Home Service Professional
-                                </div>
-                            </div>
+                <div class="overlap-group2-3 pagination">
+                    <div class="until-i-met-uleadz valign-text-middle poppins-normal-black-18px">
+                        &#34;Until I met Uleadz I was spending half of my time dealing with calls and jobs management. Now I
+                        have automated it and I don’t need to deal with it anymore, I can invest my time making more
+                        money.&#34;
+                    </div>
+                    <div class="group-619">
+                        <img class="ellipse-42" src="~/lib/img/ellipse-42-3@2x.png" />
+                        <div class="overlap-group-5">
+                            <div class="name valign-text-middle poppins-medium-black-16px">Josh Garcia</div>
+                            <div class="field-technician valign-text-middle poppins-normal-black-14px">Field Technician</div>
                         </div>
                     </div>
-                    <div class="overlap-group2-3">
-                        <div class="until-i-met-uleadz valign-text-middle poppins-normal-black-18px">
-                            &#34;Until I met Uleadz I was spending half of my time dealing with calls and jobs management. Now I
-                            have automated it and I don’t need to deal with it anymore, I can invest my time making more
-                            money.&#34;
-                        </div>
-                        <div class="group-619">
-                            <img class="ellipse-42" src="~/lib/img/ellipse-42-3@2x.png" />
-                            <div class="overlap-group-5">
-                                <div class="name valign-text-middle poppins-medium-black-16px">Josh Garcia</div>
-                                <div class="field-technician valign-text-middle poppins-normal-black-14px">Field Technician</div>
-                            </div>
-                        </div>
-                    </div>
+                </div>
                 </div>
                 @*copy*@
-                <div class="flex-row-2 pagination">
-                    <div class="flex-col-4">
-                        <div class="testimonial poppins-normal-black-14px">TESTIMONIAL</div>
-                        <div class="you-get-more-than-what-you-pay-for poppins-medium-black-50px">
-                            You get more than what<br />you pay for
-                        </div>
-                        <p class="we-will-take-care-of-everything-else poppins-normal-black-16px">
-                            We will take care of everything else
-                        </p>
+                <div class="group-622 pagination" data-index="last">
+                <div class="overlap-group1-3 ">
+                    <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
+                        &#34;If you are looking to save time and be more organized with your business, this is what you are
+                        looking for. Awesome system, very time saving and user friendly! Great to keep your business
+                        organized!&#34;
                     </div>
-                    <div class="overlap-group-3">
-                        <img class="rectangle-258-1" src="~/lib/img/rectangle-258-1@2x.png" />
-                        @*<img class="rectangle-258" src="~/lib/img/rectangle-258-2@2x.png" />*@
-                        <img class="rectangle-259" src="~/lib/img/rectangle-259-1@2x.png" />
-                        <img class="rectangle-260" src="~/lib/img/rectangle-260-1@2x.png" />
-                    </div>
-                </div>
-                <div class="group-622 pagination">
-                    <div class="overlap-group1-3">
-                        <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
-                            &#34;copy If you are looking to save time and be more organized with your business, this is what you are
-                            looking for. Awesome system, very time saving and user friendly! Great to keep your business
-                            organized!&#34;
-                        </div>
-                        <div class="group-618">
-                            <img class="ellipse-42" src="~/lib/img/ellipse-42-2@2x.png" />
-                            <div class="overlap-group-4">
-                                <div class="name valign-text-middle poppins-medium-black-16px">Michael Jones</div>
-                                <div class="home-service-professional valign-text-middle poppins-normal-black-14px">
-                                    Home Service Professional
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="overlap-group2-3">
-                        <div class="until-i-met-uleadz valign-text-middle poppins-normal-black-18px">
-                            &#34;copy Until I met Uleadz I was spending half of my time dealing with calls and jobs management. Now I
-                            have automated it and I don’t need to deal with it anymore, I can invest my time making more
-                            money.&#34;
-                        </div>
-                        <div class="group-619">
-                            <img class="ellipse-42" src="~/lib/img/ellipse-42-3@2x.png" />
-                            <div class="overlap-group-5">
-                                <div class="name valign-text-middle poppins-medium-black-16px">Josh Garcia</div>
-                                <div class="field-technician valign-text-middle poppins-normal-black-14px">Field Technician</div>
+                    <div class="group-618">
+                        <img class="ellipse-42" src="~/lib/img/ellipse-42-2@2x.png" />
+                        <div class="overlap-group-4">
+                            <div class="name valign-text-middle poppins-medium-black-16px">Michael Jones</div>
+                            <div class="home-service-professional valign-text-middle poppins-normal-black-14px">
+                                Home Service Professional
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="overlap-group2-3 pagination" data-index="last">
+                    <div class="until-i-met-uleadz valign-text-middle poppins-normal-black-18px">
+                        &#34;Until I met Uleadz I was spending half of my time dealing with calls and jobs management. Now I
+                        have automated it and I don’t need to deal with it anymore, I can invest my time making more
+                        money.&#34;
+                    </div>
+                    <div class="group-619">
+                        <img class="ellipse-42" src="~/lib/img/ellipse-42-3@2x.png" />
+                        <div class="overlap-group-5">
+                            <div class="name valign-text-middle poppins-medium-black-16px">Josh Garcia</div>
+                            <div class="field-technician valign-text-middle poppins-normal-black-14px">Field Technician</div>
+                        </div>
+                    </div>
+                </div>
+                 </div>
+
 
             </div>
-            <a href="#" class="next"><img class="arrow-right-1" src="~/lib/img/arrow-right-3@2x.svg" /></a>
+            <a id="next" class="next"><img class="arrow-right-1" src="~/lib/img/arrow-right-3@2x.svg" /></a>
             @*<img class="arrow-right-1" src="~/lib/img/arrow-right-3@2x.svg" />*@
         </div>
         <img class="rectangle-206" src="~/lib/img/rectangle-206-1@1x.png" />
