--- a/Uleadz.StaticWeb/Pages/Shared/_WhyUleadzMobile.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_WhyUleadzMobile.cshtml
@@ -38,13 +38,15 @@
                 <img class="book-4" src="~/lib/img/book-4-8@2x.png" />
             </div>
         </div>
-        <div class="group-container">
+        <div class="group-container side-1">
             <div class="overlap-group21">
+            <a href="#" class="next"><img class="arrow-222" src="/lib/img/arrow-right-3@2x.svg"></a>
+            <a href="#" class="prev"><img class="arrow-111" src="/lib/img/arrow-right-4@2x.svg"></a>
                 <div class="rectangle-181"></div>
                 <div class="packed-with-features poppins-medium-black-28px">
                     Packed With Features<br />For Your Home Service<br />Business
                 </div>
-                <div class="overlap-group4">
+                <div class="overlap-group4 pagination">
                     <img class="purse-1" src="~/lib/img/purse-1-2@2x.png" />
                     <div class="job-profitability poppins-medium-black-26px">Job Profitability</div>
                     <p class="estimates-invoices poppins-normal-black-14px">
@@ -52,15 +54,33 @@
                         Communications
                     </p>
                 </div>
-                <div class="overlap-group5">
-                    <img class="purse-2" src="~/lib/img/purse-2-3@2x.png" />
-                    <div class="customer-management poppins-medium-black-26px">Customer<br />Management</div>
-                    <p class="scheduling-dispatc poppins-normal-black-14px">
-                        Scheduling &amp; Dispatch<br />Route Planning<br />Job Profitability<br />Mobile &amp; Email Payments<br />Square
-                        Integration
+                @*copy*@
+                <div class="overlap-group4 pagination">
+                    <img class="purse-1" src="~/lib/img/purse-1-2@2x.png" />
+                    <div class="job-profitability poppins-medium-black-26px">Job Profitability</div>
+                    <p class="estimates-invoices poppins-normal-black-14px">
+                        copy-1  Estimates &amp; Invoices<br />Contracts &amp; Signatures<br />Customer Management<br />Email &amp; SMS
+                        Communications
                     </p>
                 </div>
+                <div class="overlap-group4 pagination">
+                    <img class="purse-1" src="~/lib/img/purse-1-2@2x.png" />
+                    <div class="job-profitability poppins-medium-black-26px">Job Profitability</div>
+                    <p class="estimates-invoices poppins-normal-black-14px">
+                        copy-2 Estimates &amp; Invoices<br />Contracts &amp; Signatures<br />Customer Management<br />Email &amp; SMS
+                        Communications
+                    </p>
+                </div>
+                @*<div class="overlap-group5">
+                <img class="purse-2" src="~/lib/img/purse-2-3@2x.png" />
+                <div class="customer-management poppins-medium-black-26px">Customer<br />Management</div>
+                <p class="scheduling-dispatc poppins-normal-black-14px">
+                    Scheduling &amp; Dispatch<br />Route Planning<br />Job Profitability<br />Mobile &amp; Email Payments<br />Square
+                    Integration
+                </p>
+            </div>*@
             </div>
+
             <div class="overlap-group1-1">
                 <img class="purse-3" src="~/lib/img/purse-3-4@2x.png" />
                 <div class="online-booking poppins-medium-black-26px">Online Booking</div>
@@ -107,13 +127,15 @@
                 </div>
             </div>
             <img class="mask-group" src="~/lib/img/mask-group-6@2x.png" />
-            <div class="group-container-1">
+            <div class="group-container-1  side-11">
                 <div class="overlap-group24">
+                    <a href="#" class="next"><img class="arrow-222" src="/lib/img/arrow-right-3@2x.svg"></a>
+                    <a href="#" class="prev"><img class="arrow-111" src="/lib/img/arrow-right-4@2x.svg"></a>
                     <div class="rectangle-182"></div>
                     <div class="benefits-of-uleadz-f poppins-medium-black-28px">
                         Benefits of Uleadz<br />Field Management<br />Software
                     </div>
-                    <div class="group-1768">
+                    <div class="group-1768 pagination">
                         <div class="group-528">
                             <img class="graphic_1-1-9" src="~/lib/img/graphic-1-1-9-1@2x.png" />
                             <p class="a-field-service-mana poppins-normal-black-14px">
@@ -123,15 +145,26 @@
                             </p>
                         </div>
                     </div>
-                    <div class="group-1769">
-                        <div class="group-529">
-                            <img class="graphic_1-1-10" src="~/lib/img/graphic-1-1-10-1@2x.png" />
-                            <p class="an-fsm-software-redu poppins-normal-black-14px">
-                                An FSM software reduces manual labor by real-time data management and helps eliminate excessive
-                                paperwork, prevent data loss and other manual errors.<br />Fast invoicing
+                    @*copy*@
+                    <div class="group-1768 pagination">
+                        <div class="group-528">
+                            <img class="graphic_1-1-9" src="~/lib/img/graphic-1-1-9-1@2x.png" />
+                            <p class="a-field-service-mana poppins-normal-black-14px">
+                                copy-1  A Field Service Management software<br />provides a cohesive system of fieldwork<br />that
+                                standardizes the business workflow<br />and streamlines the entire process,<br />from dispatching to
+                                invoicing.
                             </p>
                         </div>
                     </div>
+                    @*<div class="group-1769">
+            <div class="group-529">
+                <img class="graphic_1-1-10" src="~/lib/img/graphic-1-1-10-1@2x.png" />
+                <p class="an-fsm-software-redu poppins-normal-black-14px">
+                    An FSM software reduces manual labor by real-time data management and helps eliminate excessive
+                    paperwork, prevent data loss and other manual errors.<br />Fast invoicing
+                </p>
+            </div>
+        </div>*@
                 </div>
                 <div class="overlap-group25">
                     <div class="group-1774">
