--- a/Uleadz.StaticWeb/wwwroot/css/app/pricing.css
+++ b/Uleadz.StaticWeb/wwwroot/css/app/pricing.css
@@ -1044,6 +1044,13 @@
             margin-bottom: 175.0px;
             margin-left: 45px;
             width: 32px;
+
+              
+        margin-left: 1060px;
+        margin-top: 552.56px;
+        width: 32px;
+        z-index: 3;
+        position: absolute;
         }
 
         .pricing .overlap-group8 {
